// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image find the image without accent color 1`] = `
<DocumentFragment>
  <svg>
    trash-light.svg
  </svg>
</DocumentFragment>
`;

exports[`Image should render 1`] = `
<DocumentFragment>
  <svg>
    welcome-banner-light-green.svg
  </svg>
</DocumentFragment>
`;

exports[`Image should render nothing if image can't be found 1`] = `<DocumentFragment />`;

exports[`Image should render with domain 1`] = `
<DocumentFragment>
  <svg>
    generic-error-light-green.svg
  </svg>
</DocumentFragment>
`;

exports[`Image should render with string 1`] = `
<DocumentFragment>
  <img
    alt=""
    src="welcome-modal-step-1-banner-light-green.png"
  />
</DocumentFragment>
`;
